@@ -247,6 +247,32 @@ scripted_gui = {
 				}
 				ingame_update_setup = yes
 			}
+
+			# Power Generation Toggles
+			toggle_fossil_fuel_power_plant_generation_click = {
+				if = {
+					limit = { has_country_flag = disable_fossil_fuel_power_plant_flag }
+					clr_country_flag = disable_fossil_fuel_power_plant_flag
+					custom_effect_tooltip = toggle_fossil_fuel_power_plant_generation_one_tt
+				}
+				else = {
+					set_country_flag = disable_fossil_fuel_power_plant_flag
+					custom_effect_tooltip = toggle_fossil_fuel_power_plant_generation_two_tt
+				}
+				ingame_update_setup = yes
+			}
+			toggle_nuclear_power_plant_generation_click = {
+				if = {
+					limit = { has_country_flag = disable_nuclear_power_plant_flag }
+					clr_country_flag = disable_nuclear_power_plant_flag
+					custom_effect_tooltip = toggle_nuclear_power_plant_generation_one_tt
+				}
+				else = {
+					set_country_flag = disable_nuclear_power_plant_flag
+					custom_effect_tooltip = toggle_nuclear_power_plant_generation_two_tt
+				}
+				ingame_update_setup = yes
+			}
 		}
 
 		# AI Section
