@@ -278,6 +278,7 @@ guiTypes = {
 			}
 		}
 
+		# Energy Screen Buttons
 		containerWindowType = {
 			name = "energy_screen_buttons"
 			position = { x = 12 y = 350 }
@@ -381,8 +382,8 @@ guiTypes = {
 				pdx_tooltip = "enable_nuclear_reactor_fuel_production_tt"
 				pdx_tooltip_delayed = "enable_nuclear_reactor_fuel_production_delayed_tt"
 				clicksound = click_checkbox
-				#frame = 2
 			}
+
 			instantTextboxType = {
 				name = "uranium_enrichment"
 				position = { x = 220 y = -5 }
@@ -436,6 +437,37 @@ guiTypes = {
 				pdx_tooltip = buy_fuel_for_money_button_tt
 				pdx_tooltip_delayed = buy_fuel_for_money_button_delayed_tt
 			}
+
+			# Toggle Power Production
+			instantTextboxType = {
+				name = "toggle_power_production_type"
+				position = { x = 315 y = -220 }
+				font = "hoi_24header"
+				borderSize = {x = 0 y = 0}
+				text = "TOGGLE_POWER_PRODUCTION"
+				maxWidth = 220
+				maxHeight = 20
+				format = centre
+			}
+			buttonType = {
+				name = "toggle_fossil_fuel_power_plant_generation"
+				position = { x = 375 y = -200 }
+				spriteType = "GFX_double_positive_power"
+				buttonFont = "hoi_16mbs"
+				pdx_tooltip = "toggle_fossil_fuel_power_plant_generation_tt"
+				pdx_tooltip_delayed = "toggle_fossil_fuel_power_plant_generation_delayed_tt"
+				clicksound = click_checkbox
+			}
+			buttonType = {
+				name = "toggle_nuclear_power_plant_generation"
+				position = { x = 425 y = -200 }
+				spriteType = "GFX_double_positive_power"
+				buttonFont = "hoi_16mbs"
+				pdx_tooltip = "toggle_nuclear_power_plant_generation_tt"
+				pdx_tooltip_delayed = "toggle_nuclear_power_plant_generation_delayed_tt"
+				clicksound = click_checkbox
+			}
+
 		}
 	}
 }
