@@ -164,6 +164,17 @@
  URANIUM_ENRICHMENT: "Nuclear Fuel Production"
  NUCLEAR_ENERGY_PROD: "[?nuclear_reactor_fuel_production|0G] Kg"
 
+ TOGGLE_POWER_PRODUCTION: "Power Toggles"
+ toggle_fossil_fuel_power_plant_generation_tt: "§YToggle Fossil Fuel Powerplant Generation§!\nToggle §YFossil Fuel Powerplant§! energy generation. We can do this to focus solely on renewable or as a tactical choice to reduce the amount of fossil fuel consumed per hour."
+ toggle_fossil_fuel_power_plant_generation_delayed_tt: "§YEffects:§!\n[!toggle_fossil_fuel_power_plant_generation_click]"
+ toggle_fossil_fuel_power_plant_generation_one_tt: "Enable §YFossil Fuel Powerplant Generation§!"
+ toggle_fossil_fuel_power_plant_generation_two_tt: "Disable §YFossil Fuel Powerplant Generation§!"
+
+ toggle_nuclear_power_plant_generation_tt: "§YToggle Nuclear Powerplant Generation§!\nToggle §YNuclear Powerplant§! energy generation. We can do this to focus solely on other means of production to reserve or save nuclear fuel for future use."
+ toggle_nuclear_power_plant_generation_delayed_tt: "§YEffects:§!\n[!toggle_nuclear_power_plant_generation_click]"
+ toggle_nuclear_power_plant_generation_one_tt: "Enable §YNuclear Powerplant Generation§!"
+ toggle_nuclear_power_plant_generation_two_tt: "Disable §YNuclear Powerplant Generation§!"
+
  # Fixed Energy Balance
  energy_total_net_energy_balance_good_tt: "[?energy_balance_value_display|%G]"
  energy_total_net_energy_balance_red_tt: "[?energy_balance_value_display|%R]"
