@@ -44,6 +44,9 @@ v1.11.2
  Map:
   - Redrew the map for the Baltic countries, Kaliningrad, Belarus, Ukraine and Moldova
 
+ User Interface (QoL):
+  - Added toggles for Nuclear Power Plant and Fossil Fuel Power Plant for more control over your energy
+
 v1.11.1b
 
  AI:
